Split connection and query timeouts
